--- a/views/view.ejs
+++ b/views/view.ejs
@@ -1,18 +1,11 @@
 <div class="relative md:ml-64 py-6 px-3 w-full">
-  <div class="mx-auto max-w-4xl">
-    <h2
-      class="text-gray-700 text-4xl lg:text-6xl font-semibold leading-none tracking-wider"
-    >
-      TradeByte
-    </h2>
-    <div class="relative text-gray-600 my-8 shadow-md rounded-b-lg">
-      <input
-        type="search"
-        name="serch"
-        placeholder="Search Stocks"
-        class="bg-transparent h-10 w-full px-5 pl-10 pr-10 rounded-full text-sm focus:outline-none"
-      />
-      <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
+    <div class="mx-auto max-w-4xl">
+        <h2 class="text-gray-700 text-4xl lg:text-6xl font-semibold leading-none tracking-wider">
+            TradeByte
+        </h2>
+        <div class="relative text-gray-600 my-8 shadow-md rounded-b-lg">
+            <input type="search" name="serch" placeholder="Search Stocks" class="bg-transparent h-10 w-full px-5 pl-10 pr-10 rounded-full text-sm focus:outline-none" />
+            <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
         <svg
           class="h-4 w-4 fill-current"
           xmlns="http://www.w3.org/2000/svg"
@@ -32,143 +25,161 @@
           />
         </svg>
       </button>
-    </div>
-    <div class="head flex justify-between items-center mx-auto mb-4">
-      <div class="company flex flex-col justify-start">
-        <h1 class="text-2xl md:text-3xl font-bold"><%= assetName %></h1>
-        <h3>
-          Sector:
-          <span class="text-sm bg-blue-400 rounded-lg p-1"><%= Sector %></span>
-        </h3>
-      </div>
-      <div class="price">
-        <h1 class="text-3xl font-bold"><%= latestPrice%></h1>
-      </div>
-    </div>
-    <h2 class="text-xl font-bold mb-1">Price Summary</h2>
-    <section class="price-summary mb-8 bg-white shadow-md p-4 rounded">
-      <div class="table w-full">
-        <div
-          class="w-full grid grid-flow-col grid-cols-2 grid-rows-2 gap-8 md:grid-cols-4 md:grid-rows-1"
-        >
-          <div class="flex flex-col justify-start">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              Today's High
-            </p>
-            <p class="text-xl font-semibold"><%= high %></p>
-          </div>
-          <div class="flex flex-col justify-start">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              Today's Low
-            </p>
-            <p class="text-xl font-semibold"><%= low %></p>
-          </div>
-          <div class="flex flex-col justify-start">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              52 Week High
-            </p>
-            <p class="text-xl font-semibold"><%= weeksHigh %></p>
-          </div>
-          <div class="flex flex-col justify-start">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              52 Week Low
-            </p>
-            <p class="text-xl font-semibold"><%= weeksLow %></p>
-          </div>
         </div>
-      </div>
-    </section>
-
-    <h2 class="text-xl font-bold mb-1">Overview</h2>
-    <section
-      class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-8"
-      style="height: 50vh;"
-    >
-      <canvas id="chart"></canvas>
-    </section>
-
-    <h2 class="text-xl font-bold mb-1">Company Essentials</h2>
-    <section class="Comapany-summary mb-4 bg-white shadow-md p-4 rounded">
-      <div class="table w-full">
-        <div
-          class="w-full grid grid-flow-col grid-cols-2 grid-rows-4 md:grid-cols-3 md:grid-rows-3 gap-4 lg:grid-cols-4 lg:grid-rows-2"
-        >
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              Market Cap
-            </p>
-            <p class="text-xl font-semibold"><%= MarketCap %></p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">EBITDA</p>
-            <p class="text-lg md:text-xl font-semibold"><%= Ebitda %></p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">P/E</p>
-            <p class="text-lg md:text-xl font-semibold"><%= PERatio %></p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">P/B</p>
-            <p class="text-lg md:text-xl font-semibold">
-              <%= PriceToBookRatio %>
-            </p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              EPS(TTM)
-            </p>
-            <p class="text-lg md:text-xl font-semibold"><%= EPS %></p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              Div. Yield
-            </p>
-            <p class="text-lg md:text-xl font-semibold"><%= DividendYield %></p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              Book Value
-            </p>
-            <p class="text-lg md:text-xl font-semibold"><%= BookValue %></p>
-          </div>
-          <div class="flex flex-col justify-start break-words">
-            <p class="text-md uppercase font-semibold text-gray-600">
-              Revenue(TTM)
-            </p>
-            <p class="text-lg md:text-xl font-semibold"><%= RevenueTTM %></p>
-          </div>
+        <div class="head flex justify-between items-center mx-auto mb-4">
+            <div class="company flex flex-col justify-start">
+                <h1 class="text-2xl md:text-3xl font-bold">
+                    <%= assetName %>
+                </h1>
+                <h3>
+                    Sector:
+                    <span class="text-sm bg-blue-400 rounded-lg p-1"><%= Sector %></span>
+                </h3>
+            </div>
+            <div class="price">
+                <h1 class="text-3xl font-bold">
+                    <%= latestPrice%>
+                </h1>
+            </div>
         </div>
-      </div>
-    </section>
-  </div>
-  <a href="/cart/<%- symbol %>">
-    <button
-      class="m-8 p-0 w-16 h-16 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 active:shadow-lg mouse shadow transition ease-in duration-200 focus:outline-none fixed right-0 bottom-0"
-    >
+        <h2 class="text-xl font-bold mb-1">Price Summary</h2>
+        <section class="price-summary mb-8 bg-white shadow-md p-4 rounded">
+            <div class="table w-full">
+                <div class="w-full grid grid-flow-col grid-cols-2 grid-rows-2 gap-8 md:grid-cols-4 md:grid-rows-1">
+                    <div class="flex flex-col justify-start">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            Today's High
+                        </p>
+                        <p class="text-xl font-semibold">
+                            <%= high %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            Today's Low
+                        </p>
+                        <p class="text-xl font-semibold">
+                            <%= low %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            52 Week High
+                        </p>
+                        <p class="text-xl font-semibold">
+                            <%= weeksHigh %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            52 Week Low
+                        </p>
+                        <p class="text-xl font-semibold">
+                            <%= weeksLow %>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <h2 class="text-xl font-bold mb-1">Overview</h2>
+        <section class="chart-container relative w-full bg-white shadow-md rounded px-4 pt-2 pb-4 mb-8" style="height: 50vh;">
+            <canvas id="chart"></canvas>
+        </section>
+
+        <h2 class="text-xl font-bold mb-1">Company Essentials</h2>
+        <section class="Comapany-summary mb-4 bg-white shadow-md p-4 rounded">
+            <div class="table w-full">
+                <div class="w-full grid grid-flow-col grid-cols-2 grid-rows-4 md:grid-cols-3 md:grid-rows-3 gap-4 lg:grid-cols-4 lg:grid-rows-2">
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            Market Cap
+                        </p>
+                        <p class="text-xl font-semibold">
+                            <%= MarketCap %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">EBITDA</p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= Ebitda %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">P/E</p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= PERatio %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">P/B</p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= PriceToBookRatio %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            EPS(TTM)
+                        </p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= EPS %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            Div. Yield
+                        </p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= DividendYield %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            Book Value
+                        </p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= BookValue %>
+                        </p>
+                    </div>
+                    <div class="flex flex-col justify-start break-words">
+                        <p class="text-md uppercase font-semibold text-gray-600">
+                            Revenue(TTM)
+                        </p>
+                        <p class="text-lg md:text-xl font-semibold">
+                            <%= RevenueTTM %>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <a href="/cart/<%- symbol %>">
+        <button class="m-8 p-0 w-16 h-16 bg-blue-600 text-white font-bold rounded-full hover:bg-blue-700 active:shadow-lg mouse shadow transition ease-in duration-200 focus:outline-none fixed right-0 bottom-0">
       Buy
     </button>
-  </a>
+    </a>
 </div>
 
 <script>
-  let datesList = <%- JSON.stringify(dates) %>;
-  let closingList = <%- JSON.stringify(closing) %> ;
-  var ctx = document.getElementById('chart').getContext('2d');
-  var myChart = new Chart(ctx, {
-    type: 'line',
-    data: {
-      labels: datesList, closingList,
-      datasets: [{
-        label: <%- JSON.stringify(symbol) %>,
-        data: closingList,
-        borderColor: "#3e95cd",
-        backgroundColor: "rgba(118,152,255,0.4)"
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
+    let datesList = <%- JSON.stringify(dates) %>;
+    let closingList = <%- JSON.stringify(closing) %>;
+    var ctx = document.getElementById('chart').getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'line',
+        data: {
+            labels: datesList,
+            closingList,
+            datasets: [{
+                label: <%- JSON.stringify(symbol) %>,
+                data: closingList,
+                borderColor: "#3e95cd",
+                backgroundColor: "rgba(118,152,255,0.4)"
+            }]
+        },
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
 
-    },
-  });
+        },
+    });
 </script>
