--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -4,105 +4,104 @@
 
 html,
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-    background-color: rgb(226, 232, 240);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  box-sizing: border-box;
+  background-color: rgb(226, 232, 240);
 }
 
 .chartjs-container {
-    position: relative;
-    margin: auto;
-    height: 75vh;
-    width: 75vw;
+  position: relative;
+  margin: auto;
+  height: 75vh;
+  width: 75vw;
 }
 
 .tradebyte-logo {
-    color: #1955E4;
-    text-shadow: 1px 2px 40px rgba(0, 0, 0, 0.5)
+  color: #1955e4;
+  text-shadow: 1px 2px 40px rgba(0, 0, 0, 0.5);
 }
 
 .line {
-    border: 1.5px solid #8e9aad;
+  border: 1.5px solid #8e9aad;
 }
 
 .user-profile {
-    border-radius: 100px;
-    border: 10px solid #1955E4;
-    width: 130px;
-    height: 130px;
+  border-radius: 100px;
+  border: 10px solid #1955e4;
+  width: 130px;
+  height: 130px;
 }
 
 .tick {
-    height: 22px;
-    width: 22px;
-    border-radius: 50%;
-    background-color: #38cda0;
-    color: white;
+  height: 22px;
+  width: 22px;
+  border-radius: 50%;
+  background-color: #38cda0;
+  color: white;
 }
 
 .tick-background {
-    background: #a9f7e6;
-    border-radius: 29px;
-    color: #1b9b7f;
+  background: #a9f7e6;
+  border-radius: 29px;
+  color: #1b9b7f;
 }
 
 .tab-color {
-    border-radius: 10px;
-    border-color: #1955E4;
-    color: #1955E4;
-  }
-  
+  border-radius: 10px;
+  border-color: #1955e4;
+  color: #1955e4;
+}
+
 .view-link {
-    color: #1955E4;
+  color: #1955e4;
 }
 
 .view-link:hover {
-    color: #0d338a;
+  color: #0d338a;
 }
 
 .button {
-    background-color: #1955E4;
+  background-color: #1955e4;
 }
 
 .button:hover {
-    background-color: #0d338a;
+  background-color: #0d338a;
 }
 
-  
 .table-content {
-    overflow: scroll;
-    overflow-x: scroll;
-    overflow-y: auto;
+  overflow: scroll;
+  overflow-x: scroll;
+  overflow-y: auto;
 }
-  
+
 .transaction-companySymbol {
-    color: rgb(0, 0, 0);
-    font-weight: 700;
-    font-size: 1.1rem;
+  color: rgb(0, 0, 0);
+  font-weight: 700;
+  font-size: 1.1rem;
 }
 
 @tailwind components;
 
 .symbolicon {
-    font-size: 72px;
-    background: -webkit-linear-gradient(#eee, #333);
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  font-size: 72px;
+  background: -webkit-linear-gradient(#eee, #333);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
-.min-w{
-    min-width: 400px;
+.min-w {
+  min-width: 400px;
 }
 
-@media (max-width:400px){
-    .min-w{
-        min-width: 300px;
-    }
+@media (max-width: 400px) {
+  .min-w {
+    min-width: 300px;
+  }
 }
 
 @tailwind utilities;
