--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,20 +1,7 @@
 <div class="relative md:ml-56 lg:ml-64 py-6 px-3 w-full">
-
-  <!-- search Box if Required -->
-  <!-- <div class="relative bg-white mx-auto max-w-6xl text-gray-600 mt-6 shadow-xl rounded-lg">
-    <lable type="submit" class="absolute left-0 top-0 mt-3 ml-4">
-      <svg class="h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-        version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 56.966 56.966"
-        style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve" width="512px" height="512px">
-        <path
-          d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
-      </svg>
-    </lable>
-    <input
-      class="bg-white focus:outline-none focus:outline-none border border-gray-300 rounded-lg mr-6 pl-10 pr-4 py-2 px-4 block w-full appearance-none leading-normal"
-      type="search" placeholder="Search">
-  </div> -->
-  <div class="mx-auto max-w-6xl flex flex-col w-full px-4 md:py-12 md:px-8 text-gray-800">
+  <div
+    class="mx-auto max-w-6xl flex flex-col w-full px-4 md:py-12 md:px-8 text-gray-800"
+  >
     <form action="/cart/buy" method="POST">
       <h1 class="text-2xl lg:text-4xl font-bold mt-8 mb-4 flex">
         Buy Stock :<input
