--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -18,10 +18,16 @@
 
     <!-- search box -->
 
-        <div>
-            <div class="relative text-gray-600 mt-12 shadow-md rounded-b-lg">
-                <input id="searchbar" type="search" name="serch" placeholder="Search Stocks" class="bg-transparent h-10 px-5 pl-10 rounded-full text-lg focus:outline-none" />
-                <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
+    <div>
+      <div class="relative text-gray-600 mt-12 shadow-md rounded-b-lg">
+        <input
+          id="searchbar"
+          type="search"
+          name="serch"
+          placeholder="Search Stocks by Symbols"
+          class="bg-transparent h-10 px-5 pl-10 rounded-full text-lg focus:outline-none"
+        />
+        <button type="submit" class="absolute left-0 top-0 mt-3 ml-4">
           <svg
             class="h-4 w-4 fill-current"
             xmlns="http://www.w3.org/2000/svg"
@@ -40,57 +46,66 @@
               d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z"
             />
           </svg>
-</button>
-            </div>
-            <ul id="search-result" style="height:0px; overflow: hidden; white-space:pre;" class="text-lg p-5 ml-10 list-none mt-0 text-gray-700"></ul>
+        </button>
+      </div>
+      <ul
+        id="search-result"
+        style="height: 0px; overflow: hidden; white-space: pre;"
+        class="text-lg p-5 ml-10 list-none mt-0 text-gray-700"
+      ></ul>
 
+      <div class="mt-8 grid lg:grid-cols-3 gap-10">
+        <!-- cards go here -->
 
-            <div class="mt-8 grid lg:grid-cols-3 gap-10">
-                <!-- cards go here -->
+        <!-- card1 -->
 
-                <!-- card1 -->
-
-                <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
-                    <div class="flex-shrink-0 w-10 h-10">
-                        <img class="w-full h-full" src="images/graph.jpeg" alt=" " />
-                    </div>
-                    <div class="font-bold text-xl xl:text-2xl ml-3">
-                        <p class="text-gray-900 whitespace-no-wrap">
-                            $40,342.04
-                        </p>
-                        <span class="block text-gray-500 text-sm">Total Portfolio</span>
-                    </div>
-                </div>
-
-                <!-- card 2 -->
-
-                <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
-                    <div class="flex-shrink-0 w-10 h-10">
-                        <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
-                    </div>
-                    <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
-                        <p class="text-gray-900 whitespace-no-wrap">
-                            $ 40,342.04
-                        </p>
-                        <span class="block text-gray-500 text-sm">Profit / Loss</span>
-                    </div>
-                </div>
-
-                <!-- card 3 -->
-
-                <div class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl">
-                    <div class="flex-shrink-0 w-10 h-10">
-                        <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
-                    </div>
-                    <div class="font-bold text-xl xl:text-2xl ml-3">
-                        <p class="text-gray-900 whitespace-no-wrap">
-                            $40,342.04
-                        </p>
-                        <span class="block text-gray-500 text-sm">$ Balance</span>
-                    </div>
-                </div>
-            </div>
+        <div
+          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
+        >
+          <div class="flex-shrink-0 w-10 h-10">
+            <img class="w-full h-full" src="images/graph.jpeg" alt=" " />
+          </div>
+          <div class="font-bold text-xl xl:text-2xl ml-3">
+            <p class="text-gray-900 whitespace-no-wrap">
+              $40,342.04
+            </p>
+            <span class="block text-gray-500 text-sm">Total Portfolio</span>
+          </div>
         </div>
+
+        <!-- card 2 -->
+
+        <div
+          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
+        >
+          <div class="flex-shrink-0 w-10 h-10">
+            <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
+          </div>
+          <div class="font-bold text-xl xl:text-2xl ml-3 justify-center">
+            <p class="text-gray-900 whitespace-no-wrap">
+              $ 40,342.04
+            </p>
+            <span class="block text-gray-500 text-sm">Profit / Loss</span>
+          </div>
+        </div>
+
+        <!-- card 3 -->
+
+        <div
+          class="card rounded-xl flex items-center h-20 sm:h-20 w-full object-cover px-5 shadow-2xl"
+        >
+          <div class="flex-shrink-0 w-10 h-10">
+            <img class="w-full h-full" src="images/graph.jpeg " alt=" " />
+          </div>
+          <div class="font-bold text-xl xl:text-2xl ml-3">
+            <p class="text-gray-900 whitespace-no-wrap">
+              $40,342.04
+            </p>
+            <span class="block text-gray-500 text-sm">$ Balance</span>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- overview heading -->
 
@@ -540,5 +555,4 @@
       for (i = 0; i <= (n - 1); i++) {
           let item = data[i];
           list += `<li><a href='/view/${item.Symbol}'>${item.Symbol}</a></li>` } document.getElementById('search-result').innerHTML = list ;console.log(data) })
-                    </script>
-
+</script>
