--- a/views/done.ejs
+++ b/views/done.ejs
@@ -78,10 +78,10 @@
     </style>
   </head>
 
-  <body style="display: flex; justify-content: center; align-items: center;">
+  <body style="display: flex; justify-content: center; align-items: center">
     <!---Card component-->
     <div
-      style="display: flex; justify-content: center; align-items: center;"
+      style="display: flex; justify-content: center; align-items: center"
       class="done-container max-w-sm mx-auto flex p-5 bg-white rounded-lg shadow-2xl"
     >
       <div class="py-4">
@@ -90,11 +90,9 @@
           <i id="check" class="far fa-check-circle fa-7x"></i>
         </div>
         <div>
-          <p class="text-black-700 text-center">
-            Thankyou for using TradeByte
-          </p>
+          <p class="text-black-700 text-center">Thankyou for using TradeByte</p>
         </div>
-        <div style="display: flex; justify-content: center;">
+        <div style="display: flex; justify-content: center">
           <button
             onclick="back()"
             class="bg-gray-700 hover:bg-red-400 text-white font-bold py-2 px-5 mx-2 mt-4 mb-3 rounded-full"
@@ -110,7 +108,7 @@
             <div class="container">
               <div
                 class="addthis_inline_share_toolbox"
-                data-url="localhost:3000/share/<%= userId %>"
+                data-url="<%= host %>/share/<%= userId %>"
               ></div>
               <div class="addthis_sharing_toolbox"></div>
             </div>
