--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -46,8 +46,10 @@
         </div>
       </form>
 
-      <div class="card flex flex-wrap justify-around sm:flex-col md:flex-col">
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <div
+          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
+        >
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 1</div>
             <p class="text-gray-700 mb-6 text-base text-base">
@@ -65,7 +67,9 @@
             >
           </div>
         </div>
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+        <div
+          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
+        >
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 2</div>
             <p class="text-gray-700 mb-6 text-base text-base">
@@ -83,7 +87,9 @@
             >
           </div>
         </div>
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+        <div
+          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
+        >
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 3</div>
             <p class="text-gray-700 mb-6 text-base text-base">
@@ -101,7 +107,9 @@
             >
           </div>
         </div>
-        <div class="max-w-sm bg-white my-4 rounded overflow-hidden shadow-lg">
+        <div
+          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
+        >
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">Test Card 4</div>
             <p class="text-gray-700 mb-6 text-base text-base">
